@@ -6,6 +6,7 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -29,7 +30,7 @@ public class DataLoader {
 
             List<Product> list =  List.of(p1,p2,p3,p4,p5,p6,p7,p8,p9,p10);
 
-            for(Product p: List.of(p1,p2,p3,p4,p5,p6,p7,p8,p9,p10)) {
+            for(Product p: Arrays.asList(p1,p2,p3,p4,p5,p6,p7,p8,p9,p10)) {
                 if(!repo.existsByName(p.getName())) {
                     repo.save(p);
                 }
